--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,8 @@
-.App {
+.app {
   text-align: center;
-}
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  column-gap: 30px;
-
-  &__item {
-    @for $startCell from 1 through 12 {
-      @for $endCell from $startCell through 12 {
-        &--#{$startCell}-#{$endCell} {
-          grid-column: #{$startCell} / #{$endCell + 1};
-        }
-      }
-    }
+  &__catalog {
+    //height: 80vh;
   }
 }
+
