--- a/src/components/PokemonCard/PokemonCard.scss
+++ b/src/components/PokemonCard/PokemonCard.scss
@@ -1,11 +1,10 @@
 .pokemon-card {
   border: 1px solid black;
   border-radius: 15px;
-  //height: 100%;
   padding: 10px;
 
   &__image {
-
+    height: 220px;
   }
 
   &__title {
@@ -14,3 +13,4 @@
 
   &__abilities {}
 }
+
