--- a/src/components/PokemonCard/PokemonCard.scss
+++ b/src/components/PokemonCard/PokemonCard.scss
@@ -1,16 +1,57 @@
 .pokemon-card {
-  border: 1px solid black;
+  background-color: #fff;
+  border: 3px solid #434A54;
   border-radius: 15px;
-  padding: 10px;
+  padding: 20px;
 
   &__image {
     height: 220px;
+    width: 220px;
   }
 
   &__title {
+    color: #434A54;
     text-transform: capitalize;
+    font-size: 30px;
+    margin: 20px 0 20px;
   }
 
-  &__abilities {}
+  &__description {
+    align-items: center;
+    min-height: 100px;
+  }
+
+  &__types {
+    margin-bottom: 10px;
+  }
 }
 
+.types {
+  &__not {
+    color: #434A54;
+    font-size: 18px;
+  }
+
+  &__button {
+    margin-right: 15px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.table {
+  box-sizing: border-box;
+  color: #434A54;
+  width: 100%;
+  margin-bottom: 20px;
+
+}
+
+.table td {
+  border-collapse: collapse;
+  border: 1px solid #434A54;
+  border-radius: 5px;
+  padding: 5px;
+}
