--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -2,19 +2,41 @@
   margin: 30px 0;
   width: 100%;
   padding: 10px 0;
-  color: white;
-  border: 2px solid blue;
+  color: #434A54;
+  border: 2px solid #fff;
   border-radius: 15px;
-  background-color: blue;
+  background-color: #fff;
   transition: all 0.3s;
   font-weight: bold;
 
   &:hover {
     background-color: transparent;
-    color: blue;
+    color: white;
   }
 
   &:active {
-    opacity: 0.7%;
+    opacity: 0.8%;
+  }
+}
+
+.button-type {
+  color: #fff;
+  padding: 5px 10px;
+  text-transform: capitalize;
+  font-size: 16px;
+  border: 2px solid #fff;
+  border-radius: 15px;
+  background-color: #ED5564;
+  transition: all 0.3s;
+  font-weight: bold;
+
+  &:hover {
+    background-color: transparent;
+    border-color: #434A54;
+    color: #434A54;
+  }
+
+  &:active {
+    opacity: 0.8%;
   }
 }
