Add hover styles for card.

--- a/src/styles/components/PokemonCard.scss
+++ b/src/styles/components/PokemonCard.scss
@@ -24,6 +24,12 @@
   &__types {
     margin-bottom: 10px;
   }
+
+  transition: all 0.3s;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 
 .types {
