Edit description styles.

--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -6,6 +6,7 @@
   &__wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     column-gap: 40px;
     row-gap: 40px;
 
